Compact mode: Fix toolbar-row height
In compact mode, the toolbar-row (the second bar up top) was being set
with a hard coded pixel (42px) which was resulting in extra space and
the misaligned icon row.

The initial diff comes from:
  e88d9340a0067c9fb267fe3a3653e42c0298ee71
  Fix toolbar up section after w2ui rework

Maybe there is something I missed, but I think we can now safely
remove that compact mode related CSS declaration while making sure
the one that is intended to affect notebookbar only does that.

--- a/browser/css/notebookbar.css
+++ b/browser/css/notebookbar.css
@@ -186,7 +186,7 @@ html[data-theme='dark'] .savemodified.unotoolbutton .unobutton img {
 	z-index: 11;
 }
 
-#toolbar-row {
+.hasnotebookbar > #toolbar-row {
 	height: 74px;
 }
 
